// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

package oidc.registration.v1;

option go_package = "oidc/registration/v1;registrationv1";

import "google/protobuf/wrappers.proto";

message Client {
  repeated string redirect_uris = 1;
  repeated string response_types = 2;
  repeated string grant_types = 3;
  google.protobuf.StringValue application_type = 4;
  repeated string contacts = 5;
  google.protobuf.StringValue client_name = 6;
  google.protobuf.StringValue logo_uri = 7;
  google.protobuf.StringValue client_uri = 8;
  google.protobuf.StringValue policy_uri = 9;
  google.protobuf.StringValue tos_uri = 10;
  google.protobuf.StringValue jwks_uri = 11;
  google.protobuf.BytesValue jwks = 12;

}
